<resources>
    <string name="app_name">Boldic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_previously_started">first entry</string>
    <string name="pref_login_first_started">login first entry</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="amazing_experince">Login or Signup to get our special deals,\n Amazing experience awaits you!</string>
    <string name="login">Login</string>
    <string name="sign_up_it_s_free">Sign Up It\'s Free</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="next">Next</string>
    <string name="on_board_one_text">Need a good recommendation to wear? \n Find the best fashion here!</string>
    <string name="find_your_best">Find Your Best</string>
    <string name="try_it_love_it">Try it, Love it</string>
    <string name="looking_for_the_best">Looking for the best clothes to wear? We have a lot of recommendation!</string>
    <string name="best_choice_to_wear">Best Choice To Wear</string>
    <string name="best_choice">Best clothes choice for you to wear, Hear it from our latest buyer!</string>
    <string name="best_price_you_can_get">Best Price You Can Get</string>
    <string name="best_clothes">Best clothes choice for you to wear, Hear it from our latest buyer!</string>
    <string name="boldic">Boldic</string>
    <string name="find_you_style">FIND YOU STYLE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login_text">Login to get our special deals, \n Amazing experience awaits you!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_email_address">Enter your email address associated \n with your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_password_was">Your Password \n Was Successfully \n Changed</string>
    <string name="search_product">Search Product</string>
    <string name="see_all_promo">See all promo</string>
    <string name="Jonathan">Jonathan Davis</string>
    <string name="silver_member">Silver member</string>
    <string name="price_dollar">$ 5,860</string>
    <string name="add_funds">Add funds</string>
    <string name="best_seller">Best Seller</string>
    <string name="promotions">Promotions</string>
    <string name="product_price">$ 229.00</string>
    <string name="see_all_reviews">See All Reviews</string>
    <string name="separate_text">|</string>
    <string name="sold">Sold:</string>
    <string name="_0">0</string>
    <string name="left">left:</string>
    <string name="product_description_text">your go-to for all the latest trends, no matter who you are, where you’re from and what you’re up to. Our universal brand is here for you, and comes in Plus and Tall. Created by us, styled by you.</string>
    <string name="qty">Qty:</string>
    <string name="_2">2</string>
    <string name="available_color">Available Color:</string>
    <string name="size">Size:</string>
    <string name="please_select_your_size">Please select your size</string>
    <string name="you_might_also_like">You might also like:</string>
    <string name="see_all">See all</string>
    <string name="product_name">Male Water Proof Jacket</string>
    <string name="count_images_text">1/5</string>
    <string name="close">Close</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="select_all_items">Select All Items</string>
    <string name="color">Color:</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="coupon">Safe up to 20% with our special coupon discount</string>
    <string name="total_payment">Total Payment</string>
    <string name="check_out">Check Out</string>
    <string name="checkout">Checkout</string>
    <string name="items_added">Items Added</string>
    <string name="review_order">Review Order</string>
    <string name="shipment_address">Shipment Address</string>
    <string name="delete_or_add">Delete or Add</string>
    <string name="email_password_empty">The Email and Password is empty</string>
    <string name="phone_number">Phone Number</string>

</resources>