<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/welcome_screen"
    tools:context=".onboarding.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_56_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <include
            layout="@layout/boldic_logo_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/noto_serif_regular"
        android:textSize="@dimen/text_size_24"/>

    <TextView
        android:id="@+id/motivate_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:textColor="@color/gray_text_color"
        android:textAlignment="center"
        android:fontFamily="@font/noto_serif_regular"
        android:layout_marginTop="@dimen/space_8_dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:text="@string/amazing_experince"
        android:textSize="@dimen/text_size_14"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_welcome_fragment"
        android:layout_width="@dimen/space_240_dp"
        android:layout_height="@dimen/space_56_dp"
        android:layout_marginTop="@dimen/space_56_dp"
        android:background="@drawable/btn_shape_green"
        android:text="@string/login"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintTop_toBottomOf="@id/motivate_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn_welcome_fragment"
        android:layout_width="@dimen/space_240_dp"
        android:layout_height="@dimen/space_56_dp"
        android:layout_marginTop="@dimen/space_24_dp"
        android:background="@drawable/btn_shape_white"
        android:text="@string/sign_up_it_s_free"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintTop_toBottomOf="@id/login_btn_welcome_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password_btn_welcome_fragment"
        android:layout_width="@dimen/space_240_dp"
        android:layout_height="@dimen/space_56_dp"
        android:layout_marginTop="@dimen/space_48_dp"
        android:background="#00FFFFFF"
        android:text="@string/forgot_password"
        android:fontFamily="@font/noto_serif_regular"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn_welcome_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/blue_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>