<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/on_board_one"
    tools:context=".onboarding.OnBoardingOneFragment">

    <ImageView
        android:id="@+id/point_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/on_board_one_point"
        app:layout_constraintStart_toStartOf="@id/find_your_best"
        app:layout_constraintBottom_toTopOf="@id/find_your_best"
        app:layout_constraintEnd_toEndOf="@id/find_your_best"
        android:layout_marginBottom="@dimen/space_48_dp"/>


    <TextView
        android:id="@+id/find_your_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_your_best"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/recommendation_text"
        app:layout_constraintStart_toStartOf="@id/recommendation_text"
        app:layout_constraintEnd_toEndOf="@id/recommendation_text"
        android:layout_marginBottom="@dimen/space_16_dp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_serif_regular"
        android:textSize="@dimen/text_size_24"/>

    <TextView
        android:id="@+id/recommendation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_text_color"
        android:textAlignment="center"
        android:fontFamily="@font/noto_serif_regular"
        android:text="@string/on_board_one_text"
        android:textSize="@dimen/text_size_14"
        android:layout_marginBottom="@dimen/space_32_dp"
        app:layout_constraintBottom_toTopOf="@id/next_to_on_board_two"
        app:layout_constraintStart_toStartOf="@id/next_to_on_board_two"
        app:layout_constraintEnd_toEndOf="@id/next_to_on_board_two"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_to_on_board_two"
        android:layout_width="@dimen/space_240_dp"
        android:layout_height="@dimen/space_56_dp"
        android:background="@drawable/btn_shape_white"
        android:text="@string/next"
        android:fontFamily="@font/noto_serif_regular"
        android:layout_marginBottom="@dimen/space_40_dp"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>